--- a/firebase.json
+++ b/firebase.json
@@ -2,9 +2,10 @@
   "functions": [
     {
       "source": "/",
+      "runtime": "nodejs18",
       "codebase": "default",
       "predeploy": [
-        "npm --prefix \"$RESOURCE_DIR\" run build"
+        "npm --prefix %RESOURCE_DIR% run build"
       ]
     }
   ]
