--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@genkit-ai/flow": "^0.5.11",
     "@genkit-ai/googleai": "^0.5.11",
     "express": "^4.19.2",
-    "firebase-functions": "5.0.0",
+    "firebase-functions": "^5.1.1",
     "genkit": "^0.5.11",
     "zod": "^3.23.8"
   },
