--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "trinetra_genkit",
   "version": "1.0.0",
   "main": "lib/index.js",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node lib/index.js",
